# Snake

./: README.md  main.py  pyproject.toml  scores.csv
